--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="picture of computer on a desk " class="float-right" />
-            <h2>Online Reputation Management</h2>
+                        <h2>My Work</h2>
+            <li>
+                <a href="https://github.com/jperalta24/WoW-Connect">Wow-Connect</a>
+            </li>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                This is some of my current projects. This will need to be revamped and updated later. It is desplaying some of my projects now. 
             </p>
         </article>
         <article id="social-media-marketing" class="social-media-marketing">
@@ -75,9 +78,6 @@
         </section>
     </aside>
     <footer class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
 </body>
