--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <img src="./assets/images/online-reputation-management.jpg" alt="picture of computer on a desk " class="float-right" />
                         <h2>My Work</h2>
             <li>
-                <a href="https://github.com/jperalta24/WoW-Connect">Wow-Connect</a>
+                <a href="https://obscure-falls-87878.herokuapp.com/">Wow-Connect</a>
             </li>
             <p>
                 This is some of my current projects. This will need to be revamped and updated later. It is desplaying some of my projects now. 
