Updated the formating and updated links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul>
                 <li>
-                    <a href="#search-engine-optimization">About Me</a>
+                    <a href="#About-Me">About Me</a>
                 </li>
                 <li>
                     <a href="#online-reputation-management">Work</a>
@@ -30,54 +30,37 @@
     <main class="hero"></main>
     <class="content">
         <article class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="picture of notebook on a desk" class="float-left" />
-            <h2>Search Engine Optimization</h2>
+            <h2>About Me</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                Hi there! I'm Johann Kubeja and I'm a programmer. I specialize in JavaScript, HTML, CSS, Node.js, and Mongo. I love what I do and I'm always looking for new ways to push the boundaries of programming. I believe that coding should be fun, creative, and inspiring. When I'm not coding, you can find me playing video games or spending time with my family.
             </p>
         </article>
         <article id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="picture of computer on a desk " class="float-right" />
-                        <h2>My Work</h2>
+            <h2>My Work</h2>
             <li>
                 <a href="https://obscure-falls-87878.herokuapp.com/">Wow-Connect</a>
             </li>
+            <li>
+                <a href=" https://currancollins.github.io/TopRatedMovies/">Top-Rated-Movies</a>
+            </li>
+            <li>
+                <a href=" https://johannkubeja.github.io/Webpage-Scematics-and-Searchability/">Searchability-Optimization</a>
+            </li>
             <p>
-                This is some of my current projects. This will need to be revamped and updated later. It is desplaying some of my projects now. 
+                Here are some of my current projects I have worked on. Feel free to click the links and check them out!
             </p>
         </article>
-        <article id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="many people sharing cut outs of social media ideas on a desk" class="float-left" />
-            <h2>Social Media Marketing</h2>
+        <article id="Contact-Me" class="social-media-marketing">
+            <h2>Contact Me</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                If you would like to contact me, I have included my email and phone number for you to do so.
+                <h4>253-579-3332</h4>
+                <h4>johannkubeja@gmail.com</h4>
             </p>
         </article>
     </main>
-    <aside class="benefits">
-        <section class="benefit-lead">
-            <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="a half a gear icon with a arrow down to a money sign" />
-            <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-            </p>
-        </section>
-        <section class="benefit-brand">
-            <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="businese man with lightbulb for head and sound waves coming out his ears" />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </section>
-        <section class="benefit-cost">
-            <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="half gear icons with three circles in front with money signs on each one"></img>
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </section>
-    </aside>
-    <footer class="footer">
+    <footer>
+        <h2></h2>
         </p>
     </footer>
 </body>
