Added the lattest project

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <article id="online-reputation-management" class="online-reputation-management">
             <h2>My Work</h2>
             <li>
+                <a href="https://github.com/JohannKubeja/Takiwatanga">Takiwatanga</a>
+            <li>
                 <a href="https://obscure-falls-87878.herokuapp.com/">Wow-Connect</a>
             </li>
             <li>
